셀프조인 완료

--- a/SQL Insight/08.집합연산자.md
+++ b/SQL Insight/08.집합연산자.md
@@ -20,6 +20,8 @@
 
 - UNION ALL을 제외한 다른 집합 연산자에서는 
   SQL문의 결과 집합에서 먼저 중복된 건을 배제하는 작업을 수행한 후에 집합 연산을 적용
+  
+- mysql에서는 INTERSECT, EXCEPT 가 존재하지 않음
 ```
 <img src="./image/8-1.png" width="600">
 <br/>
